<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/icons8user24"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_task_tasks"
            android:icon="@drawable/icons8taskfilled50"
            android:title="@string/my_tasks" />
        <item
            android:id="@+id/nav_task_groups"
            android:icon="@drawable/icons8taskfilled50"
            android:title="@string/my_tasks_group" />
        <item
            android:id="@+id/nav_task_project"
            android:icon="@drawable/icons8taskfilled50"
            android:title="@string/my_tasks_project" />
        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/icons8training24"
            android:title="@string/projects" />
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/icons8useraccount24"
            android:title="@string/groups" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/about"
                android:title="@string/about_us" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/settings"
                android:title="@string/settings" />
        </menu>
    </item>

    <item android:title="@string/actions">
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/singout"
            android:title="@string/sign_out" />
    </item>

</menu>
